test/TestSuite/Scheduler/Errors/milestone_duration.tjp
project test "Test" "1.0" 2008-02-02 +1m

# MARK: error 4 milestone_duration 
task t "T" {
  start ${projectstart}
  milestone
  length 2d
}
